force-app/main/default/objects/Market_Segment__c/Market_Segment__c.object-meta.xml
<CustomObject>
    <description>Stores information on account&apos;s market segment, sub-segment and allocated percent if more than one is assigned</description>
    <label>Market Segment</label>
    <nameField>
        <displayFormat>MS-{000000}{MMDDYYYY}</displayFormat>
        <label>Market Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>