force-app/main/default/objects/Market_Segment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Lookup to account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Segments</relationshipLabel>
    <relationshipName>Market_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>