force-app/main/default/objects/Market_Segment__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>Stores information of account's market segment</description>
    <label>Market Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Segment</valueSetName>
    </valueSet>
</CustomField>