force-app/main/default/objects/Market_Segment__c/fields/Market_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Sub_Segment__c</fullName>
    <description>Stores information of account's sub-segment</description>
    <label>Market Sub Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Market_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Market_Sub_Segment</valueSetName>
    </valueSet>
</CustomField>