force-app/main/default/objects/Market_Segment__c/fields/Percent_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Percent_Allocation__c</fullName>
    <description>Stores information of market segment, sub-segment and allocated percent if more than one is assigned</description>
    <label>Percent Allocation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>