force-app/main/default/objects/Market_Segment__c/validationRules/CheckMarketSegmentChangeAfterSubmit.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckMarketSegmentChangeAfterSubmit</fullName>
    <active>true</active>
    <description>Once the related account has been submitted to ERP or When the account is synced with SAP, only Data Stewards, system Admins or users with Edit Market Segment permission set can edit or create new market segments.</description>
    <errorConditionFormula>AND(
				NOT(
								 OR(
													$Profile.Name = $Label.ProfileSystemAdmin,
													$Permission.DS_Edit_Market_Segment
													)
								),
				NOT( 
							OR(
											ISPICKVAL(Account__r.Address_Status__c,&quot;Not Submitted&quot;),
											ISBLANK( Account__r.ERP_Customer_Id__c )
											)
								)
				)</errorConditionFormula>
    <errorMessage>You cannot edit or create new Market Segments once the account has been submitted to SAP. Please contact your Data Stewards for further assistance.</errorMessage>
</ValidationRule>